--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -11,6 +11,18 @@
 		</div>
 		<hr>
 		<div class="social">
+		<% unless current_user.connections.where(provider: "twitter").any? %>
+			<%= link_to "Connect Twitter", "/auth/twitter", class: "btn btn-info btn-block btn-sm" %>
+			<% else %>
+			<%= link_to "Disconnect Twitter", connection_path(current_user.connections.where(provider: "twitter").first), method: :delete, class: "btn btn-info btn-block btn-sm" %>
+			<% end %>
+
+			<% unless current_user.connections.where(provider: "facebook").any? %>
+			<%= link_to "Connect Facebook", "/auth/facebook", class: "btn btn-primary btn-block btn-sm" %>
+			<% else %>
+			<%= link_to "Disconnect Facebook", connection_path(current_user.connections.where(provider: "facebook").first), method: :delete, class: "btn btn-primary btn-block btn-sm" %>
+			<% end %>
+
 
 		</div>
 	</div>
