Background jobs successfully integrated

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -32,7 +32,8 @@
 
 	<div class="col-md-5">
 		<H3 class="text-center">Queue</H3>
-		<hr> 
+		<hr>
+		<%= render @scheduled %> 
 	</div>
 
 	<!-- History -->
@@ -40,6 +41,7 @@
 	<div class="col-md-5">
 		<H3 class="text-center">History</H3>
 		<hr>
+		<%= render @history %>
 	</div>
 
 </div>
