--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,3 +1,5 @@
+
+<div class="container">
 <div class="row">
 	
 	<!-- Profiles and Connections -->
@@ -33,8 +35,13 @@
 	<div class="col-md-5">
 		<H3 class="text-center">Queue</H3>
 		<hr>
-		<%= render @scheduled %>
-		<%= will_paginate @scheduled, :param_name => 'scheduled_page' %> 
+		<% if current_user.posts.where(state: "scheduled").any? %>
+			<%= render @scheduled %>
+			<%= will_paginate @scheduled, :param_name => 'scheduled_page' %>
+		<% else %>
+			<p class="text-center">World changing posts posted, pictures shared and updates broadcast.<%= link_to "Add more?", new_post_path %></p>
+			<hr> 
+		<% end %> 
 	</div>
 
 	<!-- History -->
@@ -46,4 +53,5 @@
 		<%= will_paginate @history, :param_name => 'history_page' %> 
 	</div>
 
+</div>
 </div>
