--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,7 +2,7 @@
 <div class="panel-heading">
 <% if post.facebook == true %><span class="label label-primary">Facebook</span><% end %>
 <% if post.twitter == true %><span class="label label-info">Twitter</span><% end %>
-Scheduled at <%= post.scheduled_at %>
+Scheduled for <%= post.scheduled_at %>
 </div>
 <div class="panel-body">
 <%= post.content %>
@@ -10,5 +10,6 @@ Scheduled at <%= post.scheduled_at %>
 <div class="panel-footer">
 <p><%= post.state.capitalize %></p>
 <%= link_to "Cancel", cancel_post_path(post), method: :put if post.state == "scheduled" %>
+<%= link_to "Post now?", post_path(post), method: :put if post.state == "scheduled" %>
 </div>
 </div>
