--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -39,7 +39,7 @@
 			<%= render @scheduled %>
 			<%= will_paginate @scheduled, :param_name => 'scheduled_page' %>
 		<% else %>
-			<p class="text-center">World changing posts posted, pictures shared and updates broadcast. <%= link_to "Add more?", new_post_path %></p>
+			<p class="text-center">World changing posts, pictures and updates shared. <%= link_to "Add more?", new_post_path %></p>
 			<hr> 
 		<% end %> 
 	</div>
