Changes 14/01/2016, working prototype day 1

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,14 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<body class="homepage">
+	<%= image_tag("EP_secureNB.png", :class => "homelogo") %>
+
+	<div class="container">
+	<br>
+	<br>
+	<br>
+	<br>
+		<div class="row tagline"><div class="col-xs-12 col-sm-12 col-md-9 col-lg-9"><h1>Everpresent</h1><h3>Schedule social media posts for the day, week, month... whenever.</h3></div></div><br><br><br>
+
+		<%= link_to "Join the Private BETA", new_user_registration_path, :class => "btn btn-primary btn-lg outline" %>
+	</div>
+
+</body>
