--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
 	<br>
 		<div class="row tagline"><div class="col-xs-12 col-sm-12 col-md-9 col-lg-9"><h1>Everpresent</h1><h3>Schedule social media posts for the day, week, month... whenever.</h3></div></div><br><br><br>
 
-		<%= link_to "Join the Private BETA", new_user_registration_path, :class => "btn btn-primary btn-lg outline" %>
+		<%= link_to "Join the Private BETA", new_user_registration_path, :class => "bton bton-primary bton-lg outline" %>
 	</div>
 
 </body>
