--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -22,7 +22,7 @@
 
 .alert {
 	position: absolute;
-	left: 30px;
+	right: 30px;
 	z-index: 2;
 	width: 250px;
 }
@@ -118,3 +118,13 @@
 a:hover {
 	text-decoration: none;
 }
+.social a {
+  color: #FFFFFF;
+  text-decoration: none;
+}
+
+
+
+
+
+
