--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -14,15 +14,15 @@
 		<hr>
 		<div class="social">
 		<% unless current_user.connections.where(provider: "twitter").any? %>
-			<%= link_to "Connect Twitter", "/auth/twitter", class: "btn btn-info btn-block btn-sm" %>
+			<social class="btn btn-info btn-block btn-sm"><%= link_to "Connect Twitter", "/auth/twitter" %>&nbsp;<i class="fa fa-twitter fa-lg"></i></social>
 			<% else %>
-			<%= link_to "Disconnect Twitter", connection_path(current_user.connections.where(provider: "twitter").first), method: :delete, class: "btn btn-info btn-block btn-sm" %>
+			<social class="btn btn-info btn-block btn-sm"><%= link_to "Disconnect Twitter", connection_path(current_user.connections.where(provider: "twitter").first), method: :delete %>&nbsp;<i class="fa fa-twitter fa-lg"></i></social>
 			<% end %>
 
 			<% unless current_user.connections.where(provider: "facebook").any? %>
-			<%= link_to "Connect Facebook", "/auth/facebook", class: "btn btn-primary btn-block btn-sm" %>
+			<social class="btn btn-primary btn-block btn-sm"><%= link_to "Connect Facebook", "/auth/facebook" %>&nbsp;<i class="fa fa-facebook fa-lg"></i></social>
 			<% else %>
-			<%= link_to "Disconnect Facebook", connection_path(current_user.connections.where(provider: "facebook").first), method: :delete, class: "btn btn-primary btn-block btn-sm" %>
+			<social class="btn btn-primary btn-block btn-sm"><%= link_to "Disconnect Facebook", connection_path(current_user.connections.where(provider: "facebook").first), method: :delete %>&nbsp;<i class="fa fa-facebook fa-lg"></i></social>
 			<% end %>
 
 
@@ -30,7 +30,7 @@
 	</div>
 
 
-	<!-- Posts -->
+	<!-- Queue -->
 
 	<div class="col-md-5">
 		<H3 class="text-center">Queue</H3>
@@ -39,7 +39,7 @@
 			<%= render @scheduled %>
 			<%= will_paginate @scheduled, :param_name => 'scheduled_page' %>
 		<% else %>
-			<p class="text-center">World changing posts, pictures and updates shared. <%= link_to "Add more?", new_post_path %></p>
+			<p class="text-center">World changing posts, pictures and updates shared.<br><br> <%= link_to "Click to add more", new_post_path, :class => "btn btn-warning btn-lg" %></p>
 			<hr> 
 		<% end %> 
 	</div>
