--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -2,6 +2,94 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+body {
+  background-color: #FFF
+
+}
+h2 {
+  color: #062f3c;
+  font-family: 'Open Sans', sans-serif;
+}
+h3 {
+  color: #062f3c;
+  font-family: 'Open Sans', sans-serif;
+  text-transform: uppercase;
+}
+p {
+  color: #062f3c;
+  font-family: 'Open Sans', sans-serif;
+}
+.panel-footer {
+  background-color: #2b82ad;
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+}
+.panel-footer p {
+  color: #FFF
+}
+.user_email {
+  color: #062f3c;
+  font-family: 'Open Sans', sans-serif;
+}
+.user_password {
+  color: #062f3c;
+  font-family: 'Open Sans', sans-serif;
+}
+.user_time_zone {
+  color: #062f3c;
+  font-family: 'Open Sans', sans-serif;
+}
+.user_remember_me {
+  color: #737373
+}
+a {
+  color: #737373
+}
+a:hover {
+  color: #C2C2C2
+}
+.hr {
+  border-top: 1px solid #062f3c;
+}
+.alert {
+  border-radius: 0px;
+}
+.disabled {
+  color: #C2C2C2
+}
+.current {
+  text-decoration: underline;
+}
+.btn {
+  border-radius: 0px;
+}
+.btn-warning {
+  background-color: #f56722;
+  border-color: #f55722;
+  border-radius: 0px;
+}
+.btn-warning:hover {
+  background-color: #f55722;
+  border-color: #f57622;
+}
+.panel {
+  border-radius: 0px
+}
+.form-control {
+  border-radius: 0px;
+}
+.user_time_zone {
+  border-radius: 0px;
+}
+.queue_link {
+  color: #C2C2C2;
+}
+.queue_link:hover {
+  color: #FFF
+}
+.queue_link:focus{
+  text-decoration: none;
+}
 .homepage {
   	background: linear-gradient(to bottom right, #0790bc, #00E1A9 80%) no-repeat center center fixed;
   	-webkit-background-size: cover;
@@ -9,7 +97,18 @@
   	-o-background-size: cover;
   	background-size: cover;
 }
-
+.homepage h3 {
+  color: #FFF
+}
+.homepage p {
+  color: #FFF
+}
+.homepage a {
+  color: #FFF
+}
+.homepage a:hover {
+  color: #C2C2C2
+}
 .homelogo {
 	height: 120px;
 	widows: 120px;
@@ -60,7 +159,7 @@
 .bton-lg {
   font-size: 18px;
   line-height: 1.33;
-  border-radius: 6px;
+  border-radius: 0px;
 }
 
 .bton-primary {
