--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
+	<div class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
 		<h2>Sign up</h2>
 
 		<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -12,7 +12,7 @@
 		  </div>
 
 		  <div class="form-actions">
-		    <%= f.button :submit, "Sign up" %>
+		    <%= f.button :submit, "Sign up", :class => 'btn btn-warning' %>
 		  </div>
 		<% end %>
 
