--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -17,7 +17,7 @@
 </div>
 
 <div class="form-actions">
-<%= f.button :submit %>
+<%= f.button :submit, :class => 'btn btn-warning' %>
 </div>
 
 <% end %>
