--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,14 +1,14 @@
 <div class="panel panel-default">
 <div class="panel-heading">
-<% if post.facebook == true %><span class="label label-primary">Facebook</span><% end %>
-<% if post.twitter == true %><span class="label label-info">Twitter</span><% end %>
-Scheduled for <%= post.scheduled_at %>
+<% if post.facebook == true %><span class="label label-primary"><i class="fa fa-facebook fa-lg"></i></span><% end %>
+<% if post.twitter == true %><span class="label label-info"><i class="fa fa-twitter fa-lg"></i></span><% end %>
+Posted at <%= post.scheduled_at %> to
 </div>
 <div class="panel-body">
 <%= post.content %>
 </div>
 <div class="panel-footer">
 <p><%= post.state.capitalize %></p>
-<%= link_to "Cancel", cancel_post_path(post), method: :put if post.state == "scheduled" %>
+<%= link_to "Cancel", cancel_post_path(post), :class => 'queue_link', method: :put if post.state == "scheduled" %>
 </div>
 </div>
