--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,7 @@
-<H1>New Post</H1>
-<%= render "form" %>
-<%= link_to "Cancel", dashboard_path %>
+<div class="row">
+	<div class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
+		<H1>New Post</H1>
+		<%= render "form" %>
+		<%= link_to "Cancel", dashboard_path %>
+	</div>
+</div>
