Mandrill Mailer Update

--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -4,9 +4,8 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Hi there <%= @user.email %></h1>
-    <p>
-      Welcome to Everpresent.
-    </p>
+    <h3>Hi there <%= @user.email %></h3>
+    <p>Welcome to Everpresent. We're currently in the thick of testing and the site is well and truly under development. We hope you stick around for the final product.</p><br>
+    <p>- Everpresent Team</p>
   </body>
 </html>
